# CPU-Scheduler

GUI/CPU/: CMakeLists.txt  ComparePriority.h  FCFS_Scheduler.cpp  FCFS_Scheduler.h  GanttChartWindow.cpp  GanttChartWindow.h  NonPreemptivePriorityScheduler.cpp  NonPreemptivePriorityScheduler.h  PreemptivePriorityScheduler.cpp  PreemptivePriorityScheduler.h  Process.cpp  Process.h  RoundRobinScheduler.cpp  RoundRobinScheduler.h  SJFNonPreemptiveScheduler.cpp  SJFNonPreemptiveScheduler.h  SJFPreemptiveScheduler.cpp  SJFPreemptiveScheduler.h  SchedulerWorker.cpp  SchedulerWorker.h  headers.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Header Files/: ComparePriority.h  FCFS_Scheduler.h  NonPreemptivePriorityScheduler.h  PreemptivePriorityScheduler.h  Process.h  RoundRobinScheduler.h  SJFNonPreemptiveScheduler.h  SJFPreemptiveScheduler.h  headers.h
Source Files/: FCFS_Scheduler.cpp  NonPreemptivePriorityScheduler.cpp  PreemptivePriorityScheduler.cpp  Process.cpp  RoundRobinScheduler.cpp  SJFNonPreemptiveScheduler.cpp  SJFPreemptiveScheduler.cpp
